--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -3,26 +3,298 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.main.view.activities.ProductActivity">
+        android:layout_height="match_parent">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewpager_22"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_centerInParent="true"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".ui.main.view.activities.ProductActivity">
 
-        <LinearLayout
-            android:id="@+id/dots_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/viewpager_22"
-            android:layout_marginTop="12dp"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal"/>
-    </RelativeLayout>
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:backgroundTint="@color/white"
+                android:elevation="8dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/nunito_sans_extra_bold"
+                        android:letterSpacing="0.25"
+                        android:text="TENDO"
+                        android:textColor="@color/deep_blue"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="90dp"
+                        android:layout_height="30dp"
+                        android:weightSum="2"
+                        android:layout_marginEnd="20dp"
+                        android:layout_gravity="bottom">
+
+                        <FrameLayout
+                            android:layout_width="26dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ic_heart_blue" />
+
+
+                        </FrameLayout>
+
+                        <FrameLayout
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            android:layout_weight="1"
+                            android:layout_gravity="center_horizontal|center_vertical">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="22dp"
+                                android:layout_gravity="center|center_vertical|center_horizontal"
+                                android:src="@drawable/ic_cart_blue" />
+
+                            <TextView
+                                android:id="@+id/tvShoppingCartCount"
+                                android:layout_width="15dp"
+                                android:layout_height="15dp"
+                                android:layout_marginEnd="2dp"
+                                android:background="@drawable/circle_bg"
+                                android:layout_gravity="end"
+                                android:gravity="center"
+                                android:maxLength="4"
+                                android:text="8"
+                                android:textColor="@color/white"
+                                android:textSize="10sp" />
+
+                        </FrameLayout>
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_arrow_back_24"/>
+
+                </androidx.appcompat.widget.Toolbar>
+            </com.google.android.material.appbar.AppBarLayout>
+
+
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPagerShowProducts"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
+
+            <LinearLayout
+                android:id="@+id/LLViewPagerIndicator"
+                android:layout_width="70dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="12dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:layout_marginStart="20dp"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintEnd_toEndOf="@+id/viewPagerShowProducts"
+                app:layout_constraintStart_toStartOf="@+id/viewPagerShowProducts"
+                app:layout_constraintTop_toBottomOf="@id/viewPagerShowProducts" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout3"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="20dp"
+                android:weightSum="2"
+                app:layout_constraintEnd_toEndOf="@+id/viewPagerShowProducts"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintStart_toEndOf="@id/LLViewPagerIndicator"
+                app:layout_constraintTop_toBottomOf="@+id/viewPagerShowProducts">
+
+                <ImageView
+                    android:layout_width="26dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_blue_love" />
+
+                <ImageView
+                    android:layout_width="26dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_share_blue" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/icubn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/nunito_sans_bold"
+                app:layout_constraintHorizontal_bias="0"
+                android:text="Oversized Denim Jacket"
+                android:textColor="@color/deep_blue"
+                android:textSize="25sp"
+                app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
+                app:layout_constraintStart_toStartOf="@+id/LLViewPagerIndicator"
+                app:layout_constraintTop_toBottomOf="@id/LLViewPagerIndicator" />
+
+
+            <LinearLayout
+                android:id="@+id/layout_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="@id/icubn"
+                app:layout_constraintStart_toStartOf="@id/icubn"
+                app:layout_constraintTop_toBottomOf="@id/icubn">
+
+
+                <FrameLayout
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="20dp">
+
+                    <Button
+                        android:id="@+id/btnAddQuantity"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:background="@drawable/ic_addition"/>
+
+                </FrameLayout>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="01"
+                    android:textColor="#B17248"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textSize="25sp"/>
+                <FrameLayout
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_gravity="center">
+
+                    <Button
+                        android:id="@+id/btnSubtractQuantity"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:background="@drawable/ic_subtraction"/>
+
+                </FrameLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="₵67.90"
+                    android:layout_marginStart="145dp"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:textColor="#B17248"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Total :"
+                app:layout_constraintEnd_toEndOf="@+id/layout_4"
+                app:layout_constraintStart_toStartOf="@+id/layout_4"
+                app:layout_constraintTop_toBottomOf="@+id/layout_4"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintHorizontal_bias="0"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/nunito_sans_regular"/>
+
+            <TextView
+                android:id="@+id/tvTotalPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="₵67.90"
+                android:textSize="34sp"
+                android:textColor="@color/deep_blue"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintEnd_toEndOf="@+id/tvTotal"
+                app:layout_constraintStart_toStartOf="@id/tvTotal"
+                app:layout_constraintTop_toBottomOf="@id/tvTotal" />
+
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintBottom_toTopOf="@id/viewpager"
+                app:layout_constraintTop_toBottomOf="@id/tvTotalPrice"
+                app:layout_constraintEnd_toEndOf="@id/tvTotalPrice"
+                app:layout_constraintStart_toStartOf="@id/tvTotalPrice" />
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tab_layout"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </ScrollView>
+
+
+
+
+
+
+
+
 
 </layout>
