--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -145,24 +145,27 @@
             </LinearLayout>
 
 
-            <ViewFlipper
-                android:id="@+id/viewFlipper"
-                android:layout_width="300dp"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpager_22"
+                android:layout_width="match_parent"
                 android:layout_height="140dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="15dp"
+                android:paddingEnd="40dp"
+                android:paddingStart="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/LLheader" />
+                app:layout_constraintTop_toBottomOf="@id/LLheader"/>
 
             <LinearLayout
-                android:id="@+id/LLviewFlipperIndicator"
-                android:layout_width="50dp"
+                android:id="@+id/LLViewPagerIndicator"
+                android:layout_width="70dp"
                 android:layout_height="20dp"
-                android:background="@color/black"
+                android:layout_marginTop="5dp"
+                android:gravity="center_horizontal"
                 android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="@+id/viewFlipper"
-                app:layout_constraintStart_toStartOf="@+id/viewFlipper"
-                app:layout_constraintTop_toBottomOf="@id/viewFlipper" />
+                app:layout_constraintEnd_toEndOf="@+id/viewpager_22"
+                app:layout_constraintStart_toStartOf="@+id/viewpager_22"
+                app:layout_constraintTop_toBottomOf="@id/viewpager_22" />
 
             <TextView
                 android:id="@+id/tvTopCategories"
@@ -176,7 +179,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.14"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/LLviewFlipperIndicator" />
+                app:layout_constraintTop_toBottomOf="@+id/LLViewPagerIndicator" />
 
             <Button
                 android:id="@+id/btnViewMore"
@@ -195,7 +198,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.7"
                 app:layout_constraintStart_toEndOf="@+id/tvTopCategories"
-                app:layout_constraintTop_toBottomOf="@+id/LLviewFlipperIndicator" />
+                app:layout_constraintTop_toBottomOf="@+id/LLViewPagerIndicator" />
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
@@ -235,6 +238,7 @@
                 android:id="@+id/recyclerviewProducts"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scrollbars="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
