--- a/app/src/main/res/layout/recyclerview_layout.xml
+++ b/app/src/main/res/layout/recyclerview_layout.xml
@@ -18,13 +18,51 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/image"
+            
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/tisho"/>
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/tisho"/>
+
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:elevation="10sp"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="top">
+
+                    <ImageView
+                        android:layout_height="30dp"
+                        android:layout_width="30dp"
+                        android:id="@+id/iv_rating"
+                        android:src="@drawable/ic_star_rate"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:elevation="10sp"
+                    android:layout_marginRight="12dp"
+                    android:layout_gravity="bottom|end">
+
+                    <ImageView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:id="@+id/iv_share"
+                        android:src="@drawable/ic_shareee"/>
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -37,26 +75,26 @@
                     android:text="White Cotton Shirt"
                     android:layout_toLeftOf="@id/cart"
                     android:textStyle="bold"
-                    android:textSize="18sp"
+                    android:textSize="12sp"
                     android:layout_marginLeft="25dp"/>
 
                 <TextView
                     android:id="@+id/price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="15dp"
                     android:text="₵67.90"
                     android:layout_toLeftOf="@id/cart"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:textSize="20sp"
+                    android:textSize="12sp"
                     android:layout_marginLeft="25dp"
                     android:layout_marginBottom="10dp"/>
 
                 <ImageView
                     android:id="@+id/cart"
-                    android:layout_width="50dp"
-                    android:layout_height="35dp"
+                    android:layout_width="30dp"
+                    android:layout_height="15dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="20dp"
